--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-minimal
+
+# jekyll主题
+title: FinePatent
+description: "多看、多思及多写"
+logo: https://user-images.githubusercontent.com/98861569/152642015-2d364b08-b397-4910-8474-0fe4492d1710.png
